src /PL40603.java
/* PL40603.java */
/* Generated By:JavaCC: Do not edit this line. PL40603.java */
import java.util.Stack;
public class PL40603 implements PL40603Constants {
    private static boolean verbose = false;
    public static int tempNum = 0;
    public static Stack<String > oppStack = new Stack<String >();
    public static Stack<String> stack = new Stack<String>();
    public static Stack<String> whileStack = new Stack<String>();
    public static Stack<String> returnStack = new Stack<String>();
    public static QuadList quads = new QuadList();
    static PL40603 parser;
    public static void main(String args []) throws ParseException
    {
        parser = new PL40603(System.in);
    parser.Input();
    quads.print();

    }
    //expression: semantics
    public static String newTemp() {
        tempNum++;
        return "~T"+tempNum;
    }

    static void expressionSem1(String opp) {
//    System.out.println("expressionSem1");
    String A = stack.pop().trim();
    String B = stack.pop().trim();
    String C = newTemp();
    quads.genQuad(opp, A, B , C);
    stack.push(C);
  }

    static void assignSem1() {
      if (verbose) System.out.println("AssignSem1");
    String A = stack.pop().trim();
    String B = stack.pop().trim();
    quads.genQuad("=",A," ", B);
    stack.push(A);
    }
    static void unarySem1() {
    String A = stack.pop().trim();
    String opp = oppStack.pop().trim();
    String C = newTemp();
    quads.genQuad(opp, A, " ", C);
    stack.push(C);
    }
  static void conditionalSem1() {
    int A = quads.nextQuad;
    String B = stack.pop().trim();
    quads.genQuad("jeqz",B," ",0+"");
    stack.push(A+"");
  }
  static void conditionalSem2() {
      if (verbose) System.out.println("Sem2");
    int A = quads.nextQuad;
    quads.genQuad("jmp", " ", " ", 0 +"");
    String B = stack.pop().trim();
    quads.setReturn(B,quads.nextQuad);
    stack.push(A + "");
  }
  static void conditionalSem3() {
    String A = stack.pop().trim();
    quads.setReturn(A,quads.nextQuad);
  }
  static void loopSem1() {
    whileStack.push(quads.nextQuad+"");
  }
  static void loopSem2() {
    String A = stack.pop().trim();
    whileStack.push(quads.nextQuad+"");
    quads.genQuad("jeqz",A," ", "0");
  }
  static void loopSem3() {
    String A = whileStack.pop().trim();
    String B = whileStack.pop().trim();
    quads.genQuad("jmp", " ", " ", B);
    quads.backpatch(A, quads.nextQuad);
  }
  static void loopSem4() {
      if (whileStack.isEmpty()) {
         System.out.println("Continue/break outside of loop");
         parser = null;
       }
    else {
      String A = whileStack.pop().trim();
      String B = whileStack.pop().trim();
      whileStack.push(B);
      whileStack.push(A);
      quads.genQuad("jmp", " ", " ", B);
    }
  }
  static void loopSem5() {
      if (whileStack.isEmpty()) {
         System.out.println("Continue/break outside of loop");
         parser = null;
       }
      else {
      String A = whileStack.pop().trim();
      whileStack.push(quads.nextQuad+"");
      quads.genQuad("jmp", " ", " ", A);
    }
  }
  static void ternSem1() {
    String A = quads.nextQuad+"";
    String B = stack.pop().trim();
    stack.push(quads.nextQuad+"");
    quads.genQuad("jeqz",B," ", "0");
  }
  static void ternSem2() {
    String B = stack.pop().trim();
    String A = stack.pop().trim();
    quads.setReturn(A,quads.nextQuad);
    String T = newTemp();
    stack.push(T);
    quads.genQuad("=", B, " ", T);
    stack.push(quads.nextQuad+"");
    quads.genQuad("jmp", " ", " ", "0");
    quads.setReturn(A,quads.nextQuad);
  }
  static void ternSem3() {
    String B = stack.pop().trim();
    String A = stack.pop().trim();
    String T = stack.pop().trim();
    quads.genQuad("=",B," ",T);
    quads.setReturn(A,quads.nextQuad);
    stack.push(T);
  }
  static void forSem1() {
    String A = stack.pop().trim();
    String B = stack.pop().trim();
    quads.genQuad("=",A," ",B);
    whileStack.push(quads.nextQuad+"");
  }
  static void forSem2() {
    whileStack.push(quads.nextQuad+"");
    String A = stack.pop().trim();
    quads.genQuad("jeqz",A," ", "0");
    whileStack.push(quads.nextQuad+""); //addr of jmp to stmt
    quads.genQuad("jmp"," "," ","0");
    whileStack.push(quads.nextQuad +"");    //begining of inc
  }
  static void forSem3() {
    String A = stack.pop().trim();
    String B = stack.pop().trim();
    quads.genQuad("=",A," ",B);

  }
  static void forSem4() {
    String A = whileStack.pop().trim();
    String B = whileStack.pop().trim();
    quads.genQuad("jmp", " "," ",A);
    quads.backpatch(B,quads.nextQuad);
  }
  static void forSem5() {
    String A = whileStack.pop().trim();
    String B = whileStack.pop().trim();
    String C = whileStack.pop().trim();
    String D = whileStack.pop().trim();
    quads.genQuad("jmp"," " ," ", D);
    quads.setReturn(B,quads.nextQuad);
    whileStack.push(C);
    whileStack.push(A);
  }

static void returnSem1() {
  String A = stack.pop();
  returnStack.push(quads.nextQuad+"");
  quads.genQuad("rtr", " "," ", A);
}

//for debugging
    static void printStack(Stack<String> st) {
    Stack<String > st1 = new Stack<String >();
    while (!st.isEmpty()) {
        String s = st.pop();
        st1.push(s);
      System.out.println("- >" + s);
    }
    while(!st1.isEmpty()) {
      st.push(st1.pop());
    }
    }

  final public void Input() throws ParseException {
    program();
  }

  final public void program() throws ParseException {if (verbose) System.out.println("program");
    methodList();
    jj_consume_token(17);
    compound_stmt();
if (verbose) System.out.println("program done");
      quads.genQuad("rtr", " ", " ", 1+"");
  }

  final public void methodList() throws ParseException {if (verbose) System.out.println("MethodList");
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      method();
    }
if (verbose) System.out.println("methodList done");
  }

  final public void method() throws ParseException {if (verbose) System.out.println("Method");
    id();
    jj_consume_token(lparen);
    id();
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(18);
      id();
    }
    jj_consume_token(rparen);
    compound_stmt();
if (verbose) System.out.println("method done");
  }

  final public void compound_stmt() throws ParseException {if (verbose) System.out.println("compund_stmt");
    jj_consume_token(lbrace);
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      stmt();
    }
    jj_consume_token(rbrace);
if (verbose) System.out.println("somp_stmt done");
  }

  final public void stmt() throws ParseException {if (verbose) System.out.println("stmt");
    if (jj_2_5(2)) {
      expression();
      jj_consume_token(19);
stack.pop().trim();
    } else if (jj_2_6(2)) {
      compound_stmt();
    } else if (jj_2_7(2)) {
      jj_consume_token(20);
loopSem1();
      test();
loopSem2();
      stmt();
loopSem3();
    } else if (jj_2_8(2)) {
      jj_consume_token(21);
      jj_consume_token(lparen);
      id();
      jj_consume_token(22);
      condition();
      jj_consume_token(19);
forSem1();
      condition();
      jj_consume_token(19);
forSem2();
      id();
      jj_consume_token(22);
      condition();
      jj_consume_token(rparen);
forSem3();
forSem5();
      stmt();
forSem4();
    } else if (jj_2_9(2)) {
      jj_consume_token(23);
      test();
conditionalSem1();
      stmt();
      if (jj_2_4(2)) {
        jj_consume_token(24);
conditionalSem2();
        stmt();
      } else {
        ;
      }
conditionalSem3();
    } else if (jj_2_10(2)) {
      jj_consume_token(25);
      jj_consume_token(19);
loopSem5();
    } else if (jj_2_11(2)) {
      jj_consume_token(26);
      jj_consume_token(19);
loopSem4();
    } else if (jj_2_12(2)) {
      jj_consume_token(27);
      expression();
      jj_consume_token(19);
returnSem1();
    } else if (jj_2_13(2)) {
      jj_consume_token(19);
if (verbose) System.out.println("stmt done");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void test() throws ParseException {if (verbose) System.out.println("test");
    jj_consume_token(lparen);
    expression();
    jj_consume_token(rparen);
if (verbose) System.out.println("test done");
  }

  final public void expression() throws ParseException {if (verbose) System.out.println("expression");
    if (jj_2_14(2)) {
      id();
      jj_consume_token(22);
      expression();
assignSem1();
    } else if (jj_2_15(2)) {
      condition();
if (verbose) System.out.println("expression done");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void condition() throws ParseException {if (verbose) System.out.println("condition");
    disjunction();
    if (jj_2_16(2)) {
ternSem1();
      jj_consume_token(28);
      expression();
      jj_consume_token(29);
ternSem2();
      condition();
ternSem3();
    } else {
      ;
    }
if (verbose) System.out.println("condition done");
  }

  final public void disjunction() throws ParseException {if (verbose) System.out.println("disjunction");
    conjunction();
    if (jj_2_17(2)) {
      jj_consume_token(30);
      disjunction();
expressionSem1("|");
    } else {
      ;
    }
if (verbose) System.out.println("disjunction done");
  }

  final public void conjunction() throws ParseException {if (verbose) System.out.println("conjunction");
    comparison();
    if (jj_2_18(2)) {
      jj_consume_token(31);
      conjunction();
expressionSem1("&");
    } else {
      ;
    }
if (verbose) System.out.println("conjunction done");
  }

  final public void comparison() throws ParseException {if (verbose) System.out.println("comparison");
    relation();
    if (jj_2_19(2)) {
      jj_consume_token(32);
      relation();
expressionSem1("==");
    } else {
      ;
    }
if (verbose) System.out.println("comparison done");
  }

  final public void relation() throws ParseException {if (verbose) System.out.println("relation");
    sum();
    label_4:
    while (true) {
      if (jj_2_20(2)) {
        ;
      } else {
        break label_4;
      }
      rel_op();
      sum();
if(oppStack.peek().equals("+")) {
                  oppStack.pop();
                  System.out.println("Trimming out the bad +");
          }
      expressionSem1(oppStack.pop().trim());
    }
if (verbose) System.out.println("relation done");
  }

  final public void sum() throws ParseException {if (verbose) System.out.println("sum");
  boolean b = true;
    term();
    label_5:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_22(2)) {
        add_op();
        sum();
expressionSem1(oppStack.pop().trim());
      } else if (jj_2_23(2)) {
        factor2(true);
b = false;
expressionSem1(oppStack.pop().trim());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
if (verbose) System.out.println("sum done");
  }

  final public void term() throws ParseException {if (verbose) System.out.println("term");
    if (jj_2_24(2)) {
      factor1();
    } else if (jj_2_25(2)) {
      factor2(false);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_6:
    while (true) {
      if (jj_2_26(2)) {
        ;
      } else {
        break label_6;
      }
      mul_op();
      if (jj_2_27(2)) {
        factor1();
      } else if (jj_2_28(2)) {
        jj_consume_token(lparen);
        factor2(false);
        jj_consume_token(rparen);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
expressionSem1(oppStack.pop().trim());
    }
if (verbose) System.out.println("term done");
  }

  final public void factor2(boolean cameFromSum) throws ParseException {
    jj_consume_token(MINUS);

    primary();
String A = stack.pop();
        String T = newTemp();
        quads.genQuad("-" ,A," ",T);
        stack.push(T);
        if(cameFromSum) {
                oppStack.push("+");
    }
  }

  final public void factor1() throws ParseException {if (verbose) System.out.println("factor1");
  char un;
  Token s = null;
    if (jj_2_29(2)) {
      s = jj_consume_token(33);
    } else {
      ;
    }
    primary();
if(s != null && s.toString().equals("!")) {
          String A = stack.pop();
          String T = newTemp();
          quads.genQuad("!" ,A," ",T);
          stack.push(T);
        } else if(s!=null && s.equals("-")) {
                String A = stack.pop();
            String T = newTemp();
                quads.genQuad("-" ,A," ",T);
                stack.push(T);
        }
  }

  final public void primary() throws ParseException {if (verbose) System.out.println("primary");
    if (jj_2_30(2)) {
      intProd();

    } else if (jj_2_31(2)) {
      id();

    } else if (jj_2_32(2)) {
      jj_consume_token(lparen);
      expression();
      jj_consume_token(rparen);
if (verbose) System.out.println("primary done");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void rel_op() throws ParseException {if (verbose) System.out.println("rel_op");
  Token opp;
    if (jj_2_33(2)) {
      opp = jj_consume_token(34);
    } else if (jj_2_34(2)) {
      opp = jj_consume_token(35);
    } else if (jj_2_35(2)) {
      opp = jj_consume_token(36);
    } else if (jj_2_36(2)) {
      opp = jj_consume_token(37);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
oppStack.push(opp.toString());
                  if (verbose) System.out.println("rel_op done");
  }

  final public void mul_op() throws ParseException {if (verbose) System.out.println("mul_op");
  Token opp;
    if (jj_2_37(2)) {
      opp = jj_consume_token(MULTIPLY);
    } else if (jj_2_38(2)) {
      opp = jj_consume_token(DIVIDE);
    } else if (jj_2_39(2)) {
      opp = jj_consume_token(38);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
oppStack.push(opp.toString());
        if (verbose) System.out.println("mul_op done");
  }

  final public void add_op() throws ParseException {if (verbose) System.out.println("add_op");
  Token opp;
    opp = jj_consume_token(PLUS);
String s = opp.toString();
      oppStack.push(s);
      if (verbose) System.out.println("add_op done");
  }

  final public void unary_op() throws ParseException {if (verbose) System.out.println("unary_op");
  Token opp;
    opp = jj_consume_token(33);
oppStack.push(opp.toString());
      if (verbose) System.out.println("unary_op done");
  }

  final public void id() throws ParseException {if (verbose) System.out.println("id");
    Token t;
    String s = "";
    t = jj_consume_token(LETTER);
s += t.toString();
    label_7:
    while (true) {
      if (jj_2_40(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_41(2)) {
        t = jj_consume_token(LETTER);
s += t.toString();
      } else if (jj_2_42(2)) {
        t = jj_consume_token(DIGIT);
s += t.toString();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
stack.push(s.trim());
if (verbose) System.out.println("id done");
  }

  final public void intProd() throws ParseException {if (verbose) System.out.println("intProd");
    Token n;
    int num = 0;
    label_8:
    while (true) {
      n = jj_consume_token(DIGIT);
num = num*10 + Integer.parseInt(n.toString());
      if (jj_2_43(2)) {
        ;
      } else {
        break label_8;
      }
    }
stack.push((num + "").trim());
        if (verbose) System.out.println("Int prod done");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }
